# Algorithm4CPPImplementation

./: CMakeLists.txt
Algorithm4Project/CArrayOperator/: CArrayOperator.h  CArrayOperatorTest.cpp
Algorithm4Project/Numeric/: Numeric.h  NumericTest.cpp
Algorithm4Project/ProgrammingModel/Expressions/: CPPExpressionsPrint.cpp  CPPExpressionsPrint.h
Algorithm4Project/ProgrammingModel/Statements/: CPPStatementsPrint.cpp  CPPStatementsPrint.h
Algorithm4Project/ProgrammingModel/Types/: CPPTypesPrint.cpp  CPPTypesPrint.h
Algorithm4Project/Searching/BinarySearch/: BianrySearchTest.cpp  BinarySearch.h
UnitTestExample_Class/: Soundex.h  SoundexTest.cpp
UnitTestExample_Fun/: sample1.cpp  sample1.h  sample1_unittest.cpp
